--- a/styles/index.css
+++ b/styles/index.css
@@ -9,11 +9,17 @@ html {
 }
 body {
 	margin: 0;
+	padding: 0;
 	min-height: 100vh;
+	overflow-x: hidden;
 	background-image: linear-gradient(to bottom, hsl(273, 75%, 66%), hsl(240, 73%, 65%));
 	background-size: cover;
 	background-repeat: no-repeat;
 	color: hsl(238, 29%, 16%);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 #boxImg,
@@ -81,13 +87,14 @@ p {
 	#boxImg {
 		display: block;
 		position: relative;
-		top: 390px;
-		left: 227px;
+		top: 291px;
+		right: 398px;
 		z-index: 10;
 	}
 
 	section {
 		position: relative;
+		top: -100px;
 		background-image: url(/faq-accordion-card-main/images/bg-pattern-desktop.svg);
 		background-position: -563px -296px;
 		width: 800px;
